--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,17 @@
         </header>
 
 
-        <main class="container site">
-            {{content}}
-        </main>
+        <div class="container">
+            <div class="row">
+                <aside class="col-sm-3 text-center sidebar">
+                    <img src="images/cluttered_code_avatar.png" />
+                </aside>
 
-	
+                <main class="site col-sm-9">
+                    {{content}}
+                </main>
+            </div>
+        </div>
 
 
 
