Fix text centering for phones

--- a/_assets/stylesheets/app.css.sass
+++ b/_assets/stylesheets/app.css.sass
@@ -1,5 +1,5 @@
 //= require syntax
-@import 'vender/bootstrap'
+//= require vender/bootstrap
 
 $screen-sm-max: 767px
 
@@ -8,4 +8,4 @@ body
 
 @media screen and (max-width: $screen-sm-max)
   .site
-    @extend .text-center
+    text-align: center
