--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
         {% stylesheet app %}
-
     </head>
     <body>
 
