--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="http://www.gravatar.com/avatar/59307d27e751bc991419cc6b2c5044d2.png?s=16" type="image/x-icon">
         {% stylesheet app %}
     </head>
     <body>
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <aside class="col-sm-3 text-center sidebar">
-                    <img src="/images/cluttered_code_avatar.png" />
+                    <img src="http://www.gravatar.com/avatar/59307d27e751bc991419cc6b2c5044d2.png?s=180" />
                 </aside>
 
                 <main class="site col-sm-9">
