add thumbnail wrapper around avatar image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="row">
                 <aside class="col-sm-3 text-center sidebar">
-                    <img src="http://www.gravatar.com/avatar/59307d27e751bc991419cc6b2c5044d2.png?s=180" />
+                    <img src="http://www.gravatar.com/avatar/59307d27e751bc991419cc6b2c5044d2.png?s=180" class="img-thumbnail" />
                 </aside>
 
                 <main class="site col-sm-9">
