Add Font awesome

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,22 @@
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li><a href="#">Link</a></li>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a target="_blank" href="https://twitter.com/cluttered_code" data-toggle="tooltip" data-placement="bottom" title="Follow me on Twitter">
+                                    <i class="fa fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://github.com/cluttered-code" data-toggle="tooltip" data-placement="bottom" title="Associated Github Projects">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6" data-toggle="tooltip" data-placement="bottom" title="Check me out on Linkedin">
+                                    <i class="fa fa-linkedin-square"></i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
