--- a/_assets/stylesheets/app.css.sass
+++ b/_assets/stylesheets/app.css.sass
@@ -1,10 +1,20 @@
 //= require syntax
 //= require vender/bootstrap
+//= require vender/font-awesome.css
 
 $screen-sm-max: 767px
 
 body
   padding-top: 70px
+
+.highlight
+  text-align: left
+
+  pre
+    word-wrap: normal
+
+    code
+      white-space: pre
 
 @media screen and (max-width: $screen-sm-max)
   .site
