--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,18 +29,23 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a target="_blank" href="https://twitter.com/cluttered_code" data-toggle="tooltip" data-placement="bottom" title="Follow me on Twitter">
+                                <a target="_blank" href="https://twitter.com/cluttered_code" data-toggle="tooltip" data-placement="bottom" title="Twitter Feed">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://github.com/cluttered-code" data-toggle="tooltip" data-placement="bottom" title="Associated Github Projects">
+                                <a target="_blank" href="https://github.com/cluttered-code" data-toggle="tooltip" data-placement="bottom" title="Github Projects">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6" data-toggle="tooltip" data-placement="bottom" title="Check me out on Linkedin">
+                                <a target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6" data-toggle="tooltip" data-placement="bottom" title="Linkedin Account">
                                     <i class="fa fa-linkedin-square"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="mailTo:cluttered.code@gmail.com" data-toggle="tooltip" data-placement="bottom" title="Email Me">
+                                    <i class="fa fa-envelope"></i>
                                 </a>
                             </li>
                         </ul>
