Cleanup meida icons on phones

--- a/_assets/stylesheets/app.css.sass
+++ b/_assets/stylesheets/app.css.sass
@@ -2,7 +2,7 @@
 //= require vender/bootstrap
 //= require vender/font-awesome.css
 
-$screen-sm-max: 767px
+$screen-xs-max: 767px
 
 body
   padding-top: 70px
@@ -16,6 +16,6 @@ body
     code
       white-space: pre
 
-@media screen and (max-width: $screen-sm-max)
+@media screen and (max-width: $screen-xs-max)
   .site
     text-align: center
