--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,22 +29,34 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a target="_blank" href="https://twitter.com/cluttered_code" data-toggle="tooltip" data-placement="bottom" title="Twitter Feed">
+                                <a class="visible-xs" target="_blank" href="https://twitter.com/cluttered_code">
+                                    <i class="fa fa-twitter"></i> Twitter Feed
+                                </a>
+                                <a class="hidden-xs" target="_blank" href="https://twitter.com/cluttered_code" data-toggle="tooltip" data-placement="bottom" title="Twitter Feed">
                                     <i class="fa fa-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://github.com/cluttered-code" data-toggle="tooltip" data-placement="bottom" title="Github Projects">
+                                <a class="visible-xs" target="_blank" href="https://github.com/cluttered-code">
+                                    <i class="fa fa-github"></i> Github Projects
+                                </a>
+                                <a class="hidden-xs" target="_blank" href="https://github.com/cluttered-code" data-toggle="tooltip" data-placement="bottom" title="Github Projects">
                                     <i class="fa fa-github"></i>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6" data-toggle="tooltip" data-placement="bottom" title="Linkedin Account">
+                                <a class="visible-xs" target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6">
+                                    <i class="fa fa-linkedin-square"></i> Linkedin Account
+                                </a>
+                                <a class="hidden-xs" target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6" data-toggle="tooltip" data-placement="bottom" title="Linkedin Account">
                                     <i class="fa fa-linkedin-square"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="mailTo:cluttered.code@gmail.com" data-toggle="tooltip" data-placement="bottom" title="Email Me">
+                                <a class="visible-xs" href="mailTo:cluttered.code@gmail.com">
+                                    <i class="fa fa-envelope"></i> Email Me
+                                </a>
+                                <a class="hidden-xs" href="mailTo:cluttered.code@gmail.com" data-toggle="tooltip" data-placement="bottom" title="Email Me">
                                     <i class="fa fa-envelope"></i>
                                 </a>
                             </li>
