--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,5 +83,6 @@
         </div>
 
         {% javascript app %}
+        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     </body>
 </html>
