--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,60 @@
-<header class="site-header">
+<header>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
 
-  <div class="wrap">
+            <!-- Brand and Toggle -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">{{site.title}}</a>
+            </div>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 18 15" enable-background="new 0 0 18 15" xml:space="preserve">
-          <path fill="#505050" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0
-            h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#505050" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484
-            h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#505050" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0
-            c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-        </svg>
-      </a>
-      <div class="trigger">
-        {% for page in site.pages %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-        {% endfor %}
-      </div>
+            <!-- Navbar Toggle Collapse -->
+            <div class="collapse navbar-collapse" id="navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="visible-xs" target="_blank" href="https://twitter.com/cluttered_code">
+                            <i class="fa fa-twitter"></i> Twitter Feed
+                        </a>
+                        <a class="hidden-xs" target="_blank" href="https://twitter.com/cluttered_code"
+                           data-toggle="tooltip" data-placement="bottom" title="Twitter Feed">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="visible-xs" target="_blank" href="https://github.com/cluttered-code">
+                            <i class="fa fa-github"></i> Github Projects
+                        </a>
+                        <a class="hidden-xs" target="_blank" href="https://github.com/cluttered-code"
+                           data-toggle="tooltip" data-placement="bottom" title="Github Projects">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="visible-xs" target="_blank"
+                           href="https://www.linkedin.com/pub/david-clutter/34/3/4a6">
+                            <i class="fa fa-linkedin-square"></i> Linkedin Account
+                        </a>
+                        <a class="hidden-xs" target="_blank" href="https://www.linkedin.com/pub/david-clutter/34/3/4a6"
+                           data-toggle="tooltip" data-placement="bottom" title="Linkedin Account">
+                            <i class="fa fa-linkedin-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="visible-xs" href="mailTo:cluttered.code@gmail.com">
+                            <i class="fa fa-envelope"></i> Email Me
+                        </a>
+                        <a class="hidden-xs" href="mailTo:cluttered.code@gmail.com" data-toggle="tooltip"
+                           data-placement="bottom" title="Email Me">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-
-  </div>
-
 </header>
