--- a/_sass/application.sass
+++ b/_sass/application.sass
@@ -2,6 +2,10 @@ $screen-xs-max: 767px
 
 body
   padding-top: 70px
+  padding-bottom: 25px
+
+li
+  text-align: left
 
 main
   img
@@ -18,6 +22,13 @@ main
 
     code
       white-space: pre
+
+.navbar-fixed-bottom
+  min-height: 20px
+  text-align: center
+
+  .container-fluid
+    color: #999
 
 @media screen and (max-width: $screen-xs-max)
   .site
