--- a/_sass/highlighting.sass
+++ b/_sass/highlighting.sass
@@ -14,6 +14,7 @@
 
   // Keyword
   .k
+    color: #990000
     font-weight: bold
 
   // Operator
@@ -143,34 +144,112 @@
   .ni
     color: #800080
 
+  // Name.Exception
+  .ne
+    color: #990000
+    font-weight: bold
 
+  // Name.Funtion
+  .nf
+    color: #990000
+    font-weight: bold
 
+  // Name.Namespace
+  .nn
+    color: #555555
 
+  // Name.Tag
+  .nt
+    color: #000080
 
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d14 } /* Literal.String.Backtick */
-.highlight .sc { color: #d14 } /* Literal.String.Char */
-.highlight .sd { color: #d14 } /* Literal.String.Doc */
-.highlight .s2 { color: #d14 } /* Literal.String.Double */
-.highlight .se { color: #d14 } /* Literal.String.Escape */
-.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
-.highlight .si { color: #d14 } /* Literal.String.Interpol */
-.highlight .sx { color: #d14 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+  // Name.Variable
+  .nv
+    color: #008080
+
+  // Operator.Word
+  .ow
+    font-weight: bold
+
+  // Text.Whitespace
+  .w
+    color: #bbbbbb
+
+  // Literal.Number.Float
+  .mf
+    color: #009999
+
+  // Literal.Number.Hex
+  .mh
+    color: #009999
+
+  // Literal.Number.Integer
+  .mi
+    color: #009999
+
+  // Literal.Number.Oct
+  .mo
+    color: #009999
+
+  // Literal.String.backtick
+  .sb
+    color: #d14
+
+  // Literal.String.Char
+  .sc
+    color: #d14
+
+  // Literal.String.Doc
+  .sd
+    color: #d14
+
+  // Literal.String.Double
+  .s2
+    color: #d14
+
+  // Literal.String.Escape
+  .se
+    color: #d14
+
+  // Literal.String.Heredoc
+  .sh
+    color: #d14
+
+  // Literal.String.Interpol
+  .si
+    color: #d14
+
+  // Literal.String.Other
+  .sx
+    color: #d14
+
+  // Literal.String.Regex
+  .sr
+    color: #009926
+
+  // Literal.String.Single
+  .s1
+    color: #d14
+
+  // Literal.String.Symbol
+  .ss
+    color: #990073
+
+  // Name.Builtin.Pseudo
+  .bp
+    color: #999999
+
+  // Name.Variable.Class
+  .vc
+    color: #008080
+
+  // Name.Variable.Global
+  .vg
+    color: #008080
+
+  // Name.Variable.Instance
+  .vi
+    color: #008080
+
+  // Literal.Number.Integer.Long
+  .il
+    color: #009999
