Enable RSS feed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
-      Copyright © 2014-{{ site.time | date: '%Y' }} {{site.author.name}}. All rights reserved.
+      Copyright © {{ site.time | date: '%Y' }} {{site.author.name}}. All rights reserved.
     </div>
   </nav>
 </footer>
