--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -35,6 +35,15 @@ main img {
   color: #999;
 }
 
+.table-nonfluid {
+  width: auto;
+}
+
+.table-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (max-width: 767px) {
   .site {
     text-align: center;
